common-applications/infra-icsl-shanghai-environment/euler-copilot/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: euler-copilot
  name: euler-copilot
