common-applications/infra-icsl-shanghai-environment/euler-copilot/networkpolicy.yaml
kind: NetworkPolicy
metadata:
  name: framework-policy-01
  namespace: euler-copilot
spec:
  podSelector:
    matchLabels:
      app: framework
  ingress:
    - ports:
        - protocol: TCP
          port: 8002
      from:
        - podSelector:
            matchLabels:
              app: web
  policyTypes:
    - Ingress
apiVersion: networking.k8s.io/v1

---
kind: NetworkPolicy
metadata:
  name: rag-policy-01
  namespace: euler-copilot
spec:
  podSelector:
    matchLabels:
      app: rag
  ingress:
    - ports:
        - protocol: TCP
          port: 8005
      from:
        - podSelector:
            matchLabels:
              app: framework
  policyTypes:
    - Ingress
apiVersion: networking.k8s.io/v1

---
kind: NetworkPolicy
metadata:
  name: vectorize-agent-policy-01
  namespace: euler-copilot
spec:
  podSelector:
    matchLabels:
      app: vectorize-agent
  ingress:
    - ports:
        - protocol: TCP
          port: 8001
      from:
        - podSelector:
            matchLabels:
              app: rag
  policyTypes:
    - Ingress
apiVersion: networking.k8s.io/v1
